se actualizan paginas, belleza}, juguetes, y hogar

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,8 +1,5 @@
 <header>
-  <nav>
-    <a href="menumobile.html">
-      <img src="icons/icon_menu.svg" alt="menu" class="menu" />
-    </a>
+   <nav>
 
     <div class="navbar-left">
       <a href="index.html">
@@ -15,23 +12,23 @@
         </li>
 
         <li>
-          <a href="index.html">Clothes</a>
+          <a href="mascotas.html">Mascotas</a>
         </li>
 
         <li>
-          <a href="index.html">Electronics</a>
+        <a href="hogar.html">Hogar</a>
         </li>
 
         <li>
-          <a href="index.html">Furnitures</a>
+          <a href="belleza.html">Belleza</a>
         </li>
 
         <li>
-          <a href="index.html">Toys</a>
+          <a href="juguetes.html">Juguetes</a>
         </li>
 
         <li>
-          <a href="index.html">Others</a>
+          <a href="otros.html">Otros</a>
         </li>
       </ul>
     </div>
