--- a/src/assets/css/cart.css
+++ b/src/assets/css/cart.css
@@ -97,6 +97,7 @@ img.btn-remove {
   transform: rotate(180deg);
   margin-right: 14px;
   cursor: pointer;
+  width: 10px;
 }
 
 .my-order-content {
