--- a/src/assets/css/cart.css
+++ b/src/assets/css/cart.css
@@ -19,7 +19,7 @@
   bottom: 0;
   width: 360px;
   padding: 24px;
-  background-color: rgb(155, 56, 56);
+  background-color: var(--white);
   box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
   display: none;
   z-index: 1000;
