--- a/src/components/header.html
+++ b/src/components/header.html
@@ -2,8 +2,8 @@
    <nav>
 
     <div class="navbar-left">
-      <a href="index.html">
-        <img src="logos/logodecayba (2).png" alt="logo" class="logo" />
+      <a href="../../../index.html">">
+        <img src="../assets/logos/logodecayba.png (2).png" alt="logo" class="logo" />
       </a>
 
       <ul>
@@ -26,18 +26,12 @@
         <li>
           <a href="juguetes.html">Juguetes</a>
         </li>
-
-        <li>
-          <a href="otros.html">Otros</a>
-        </li>
       </ul>
     </div>
 
     <div class="navbar-right">
       <ul>
-        <li class="navbar-email">
-          <a href="editar-cuenta.html"> camila@gmail.com </a>
-        </li>
+       
 
         <li class="navbar-shopping-cart">
           <a id="ver-carrito">
