modularizacion del nav

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,45 +1,42 @@
-<header>
-   <nav>
-
+ <nav >
     <div class="navbar-left">
-      <a href="../../../index.html">">
-        <img src="../assets/logos/logodecayba.png (2).png" alt="logo" class="logo" />
+      <a href="../../index.html">
+        <img src="./src/assets/logos/logodecayba.png" alt="logo" class="logo" />
       </a>
 
       <ul>
         <li>
-          <a href="Misordenes.html"> Tus pedidos </a>
+          <a href="./src/pages/cosmetic/belleza.html">Belleza</a>
         </li>
 
         <li>
-          <a href="mascotas.html">Mascotas</a>
+          <a href="./src/pages/home/hogar.html">Hogar</a>
         </li>
 
         <li>
-        <a href="hogar.html">Hogar</a>
+          <a href="./src/pages/pets/mascotas.html">Mascotas</a>
         </li>
 
         <li>
-          <a href="belleza.html">Belleza</a>
+          <a href="./src/pages/Toys/juguetes.html">Juguetes</a>
         </li>
 
-        <li>
-          <a href="juguetes.html">Juguetes</a>
-        </li>
+       
       </ul>
     </div>
 
     <div class="navbar-right">
       <ul>
-       
+      
 
         <li class="navbar-shopping-cart">
           <a id="ver-carrito">
-            <img src="icons/icon_shopping_cart.svg" alt="shopping cart" />
+            <img src="./src/assets/icon/icon_shopping_cart.svg" alt="shopping cart" />
             <div>0</div>
           </a>
         </li>
       </ul>
     </div>
   </nav>
-</header>
+  
+
