se ajusta inyecta nav

--- a/src/components/menuMobile.html
+++ b/src/components/menuMobile.html
@@ -9,7 +9,7 @@
        
 
         <li>
-          <a href="../../pages/cosmetic/belleza.html">Belleza</a>
+          <a href="../pages/cosmetic/belleza.html">Belleza</a>
         </li>
 
         <li>
