--- a/src/assets/css/detalleprod.css
+++ b/src/assets/css/detalleprod.css
@@ -114,7 +114,7 @@ body {
 .product-inf p:nth-child(2) {
   color: var(--very-light-pink);
   font-size: var(--md);
-  margin-top: 0;
+  margin-top: 50px;
   margin-bottom: 20px;
   text-align: justify;
 }
@@ -136,6 +136,9 @@ body {
   align-items: center;
   justify-content: center;
   margin-bottom: 50px;
+  width: 210px;
+  margin-left: 100px;
+  text-decoration: none;
 }
  
 /* para celular */
@@ -145,6 +148,8 @@ body {
     flex-direction: column;
   }
 
+  .add-to-cart-button {
+    margin-left: 40px};
   .carousel {
     overflow: hidden;
     margin-left: 0px;    
