--- a/src/components/menuMobile.html
+++ b/src/components/menuMobile.html
@@ -9,19 +9,19 @@
        
 
         <li>
-          <a href="../pages/cosmetic/belleza.html">Belleza</a>
+          <a href="../../src/pages/cosmetic/belleza.html">Belleza</a>
         </li>
 
         <li>
-          <a href="../../pages/home/hogar.html">Hogar</a>
+          <a href="../../src/pages/home/hogar.html">Hogar</a>
         </li>
 
         <li>
-          <a href="../../pages/pets/mascotas.html">Mascotas</a>
+          <a href="../../src/pages/pets/mascotas.html">Mascotas</a>
         </li>
 
         <li>
-          <a href="../../pages/Toys/juguetes.html">Juguetes</a>
+          <a href="../../src/pages/Toys/juguetes.html">Juguetes</a>
         </li>
 
        
