--- a/src/assets/css/juguetes.css
+++ b/src/assets/css/juguetes.css
@@ -35,6 +35,10 @@
     }
 
     @media (max-width: 600px) {
+
+      .coming-soon{
+width: 327px;
+}
       .coming-soon h1 {
         font-size: 1.5rem;
       }
