menu mobile funcionando con rutas

--- a/src/components/menuMobile.html
+++ b/src/components/menuMobile.html
@@ -1,52 +1,29 @@
-  <div class="hamburger" id="hamburger">
+<div class="hamburger" id="hamburger">
   <span></span>
   <span></span>
   <span></span>
 </div>
 
 <div class="mobile-menu">
-        <ul>
-       
+  <ul>
+    <li>
+      <a href="/src/pages/cosmetic/belleza.html">Belleza</a>
+    </li>
 
-        <li>
-          <a href="../../src/pages/cosmetic/belleza.html">Belleza</a>
-        </li>
+    <li>
+      <a href="/src/pages/home/hogar.html">Hogar</a>
+    </li>
 
-        <li>
-          <a href="../../src/pages/home/hogar.html">Hogar</a>
-        </li>
+    <li>
+      <a href="/src/pages/pets/mascotas.html">Mascotas</a>
+    </li>
 
-        <li>
-          <a href="../../src/pages/pets/mascotas.html">Mascotas</a>
-        </li>
+    <li>
+      <a href="/src/pages/Toys/juguetes.html">Juguetes</a>
+    </li>
 
-        <li>
-          <a href="../../src/pages/Toys/juguetes.html">Juguetes</a>
-        </li>
-
-       
-      </ul>
-        <!-- <ul>
-            
-            <li>
-                <a href="../../pages/">Mis compras</a>
-            </li>
-
-            
-            <li>
-                <a href="Cuenta.html">Mi cuenta</a>
-            </li>
-        </ul>
-
-        <ul>
-            
-            <li>
-                <a href="editar-cuenta.html" class="email">camila@ejemplo.com</a>
-            </li> -->
-
-            
-            <li>
-                <a href="../../pages/home/index.html" class="sign-out">salir</a>
-            </li>
-        </ul>
-    </div>
+    <li>
+      <a href="/src/pages/home/index.html" class="sign-out">Salir</a>
+    </li>
+  </ul>
+</div>
