carrito funcionando con aside en todas las paginas{

--- a/src/assets/css/carrito.css
+++ b/src/assets/css/carrito.css
@@ -177,11 +177,11 @@ body {
   margin: 40px 0px;
 }
 
-.product-detail img {
+.cerrar {
   margin-right: 14px;
   width: 14px;
   height: 14px;
-
+display: flex;
 
 }
 
