--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,5 +1,5 @@
 :root {
-    --very-light-pink: #918888;
+    --very-light-pink: #5e5c5c;
     --text-input-field: #F7F7F7;
     --hospital-green: #ACD9B2;
     --white: #FFFFFF;
