--- a/src/assets/css/hogar.css
+++ b/src/assets/css/hogar.css
@@ -33,8 +33,14 @@
       color: #666;
     }
 
+
+@keyframes wave {
+  0%, 100% { transform: translateX(-50%) scaleX(1); }
+  50% { transform: translateX(-50%) scaleX(1.1); }
+}
     @media (max-width: 600px) {
 .coming-soon{
+   margin-top: 0;
 width: 327px;
 }
       
