--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -6,7 +6,7 @@
 .card-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, 240px);
-    gap: 26px;
+    gap: 40px;
     place-content: center;
     width: 100%;
   }
@@ -39,10 +39,23 @@
   }
   
   .informacion-producto div p:nth-child(1) {
-    font-weight: bold;
-    font-size: var(--md);
-    margin-top: 0;
-    margin-bottom: 4px;
+  font-size: var(--md);
+    font-weight:bold;
+  text-align: center;
+  margin: 10px auto 10px;
+  color: #333;
+  font-family: 'Quicksand', sans-serif;
+  position: relative;
+  max-width:171px; /* límite de ancho */
+  line-height: 1.3;
+
+  /* 👇 Para cortar y poner puntos suspensivos */
+  white-space: nowrap;       /* no permite salto de línea */
+  overflow: hidden;          /* oculta lo que sobre */
+  -webkit-line-clamp: 3;     /* máximo 2 líneas */
+  -webkit-box-orient: vertical;
+   text-overflow: ellipsis;   /* agrega los "..." */
+
   }
   
   .informacion-producto div p:nth-child(2) {
@@ -58,6 +71,8 @@
   }
   
   @media (max-width: 640px) {
+.informacion-producto div p:nth-child(1) {
+     max-width:130px;}
     .card-container {
       grid-template-columns: repeat(auto-fill, 140px);
     }
