--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,89 +1,96 @@
-.main-container{
+.main-container {
   display: flex;
   justify-content: space-between;
 }
 
 .card-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 240px);
-    gap: 40px;
-    place-content: center;
-    width: 100%;
-  }
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 240px);
+  gap: 40px;
+  place-content: center;
+  width: 100%;
+}
 
-  .product-detail{
-    width: 27%;
-    display: none;
-  }
-  
-  .producto-card {
-    width: 240px;
-  }
-  
-  .product-card img {
-    width: 100%;
-    height: 240px;
-    border-radius: 20px;
-    object-fit: cover;
-  }
-  
-  .informacion-producto {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 12px;
-  }
-  
-  .informacion-producto figure {
-    margin: 0;
-  }
-  
-  .informacion-producto div p:nth-child(1) {
+.product-detail {
+  width: 27%;
+  display: none;
+}
+
+.producto-card {
+  width: 240px;
+}
+
+.product-card img {
+  width: 100%;
+  height: 240px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.informacion-producto {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 12px;
+}
+
+.informacion-producto figure {
+  margin: 0;
+}
+
+.informacion-producto div p:nth-child(1) {
   font-size: var(--md);
-    font-weight:bold;
+  font-weight: bold;
   text-align: center;
   margin: 10px auto 10px;
   color: #333;
   font-family: 'Quicksand', sans-serif;
   position: relative;
-  max-width:171px; /* límite de ancho */
+  max-width: 171px;
+  /* límite de ancho */
   line-height: 1.3;
 
   /* 👇 Para cortar y poner puntos suspensivos */
-  white-space: nowrap;       /* no permite salto de línea */
-  overflow: hidden;          /* oculta lo que sobre */
-  -webkit-line-clamp: 3;     /* máximo 2 líneas */
+  white-space: nowrap;
+  /* no permite salto de línea */
+  overflow: hidden;
+  /* oculta lo que sobre */
+  -webkit-line-clamp: 3;
+  /* máximo 2 líneas */
   -webkit-box-orient: vertical;
-   text-overflow: ellipsis;   /* agrega los "..." */
+  text-overflow: ellipsis;
+  /* agrega los "..." */
 
+}
+
+.informacion-producto div p:nth-child(2) {
+  font-size: var(--sm);
+  color: var(--very-light-pink);
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.informacion-producto figure img {
+  width: 40px;
+  height: 40px;
+}
+
+@media (max-width: 640px) {
+  .informacion-producto div p:nth-child(1) {
+    font-size: 11px;
+    max-width: 105px;
   }
-  
-  .informacion-producto div p:nth-child(2) {
-    font-size: var(--sm);
-    color: var(--very-light-pink);
-    margin-top: 0;
-    margin-bottom: 0;
+
+  .card-container {
+    grid-template-columns: repeat(auto-fill, 140px);
   }
-  
-  .informacion-producto figure img {
-    width: 40px;
-    height: 40px;
+
+  .producto-card {
+    width: 140px;
   }
-  
-  @media (max-width: 640px) {
-.informacion-producto div p:nth-child(1) {
-     max-width:130px;}
-    .card-container {
-      grid-template-columns: repeat(auto-fill, 140px);
-    }
-  
-    .producto-card {
-      width: 140px;
-    }
-  
-    .product-card img {
-      width: 100%;
-      height: 140px;
-    }
+
+  .product-card img {
+    width: 100%;
+    height: 140px;
   }
-  
+}
