--- a/src/assets/css/carrito.css
+++ b/src/assets/css/carrito.css
@@ -1,5 +1,3 @@
-
-
 body {
   font-family: "Quicksand", sans-serif;
   display: flex;
@@ -10,7 +8,7 @@ body {
 }
 
 .cabecera {
-  width: 671px;
+  width: 880px;
   display: flex;
   justify-content: space-between;
 }
@@ -18,15 +16,15 @@ body {
 .label-product {
   display: flex;
   align-items: center;
-  width: 600px;
+  width: 774px;
   justify-content: space-between;
   margin-left: 10px;
 
 }
 
 .my-order-container {
-  padding: 20px 40px;
-  width: 50rem;
+  padding: 20px 30px;
+  width: 58rem;
   height: auto;
 }
 
@@ -41,7 +39,6 @@ body {
 .contenedor-carrito {
   width: 100%;
   display: flex;
-  justify-content: space-between;
   padding-top: 20px;
 }
 
@@ -170,7 +167,7 @@ body {
   margin-right: 14px;
   width: 14px;
   height: 14px;
-display: flex;
+  display: flex;
 
 }
 
@@ -179,19 +176,6 @@ display: flex;
   font-weight: bold;
   width: 100%;
   margin-left: 50px;
-}
-
-.order {
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  align-items: center;
-  background-color: var(--text-input-field);
-  margin: 20px;
-  margin-bottom: 50px;
-  border-radius: 8px;
-  padding-left: 10px;
 }
 
 
@@ -211,7 +195,7 @@ display: flex;
 }
 
 .shopping-cart {
- display: flex;
+  display: flex;
   gap: 42px;
   margin-bottom: 24px;
   align-items: center;
@@ -227,9 +211,8 @@ display: flex;
 }
 
 .shopping-cart figure img {
-  width: 80px;
-  height: 80px;
-  border-radius: 20px;
+  width: 110px;
+  height: 110px;
   object-fit: cover;
 }
 
@@ -253,8 +236,10 @@ display: flex;
 .my-order-content {
   display: flex;
   flex-direction: column;
- 
+
 }
+
+
 
 .my-order-content .boton {
   display: flex;
@@ -268,17 +253,51 @@ display: flex;
   margin-top: 20px;
 
 }
+
 .inf-product {
-  width: 200px;
+  width: 412px;
+}
+
+.order {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 17rem;
+  height: 500px;
+  padding-right: 20px;
+  padding-left: 10px;
+  margin: 20px;
+  margin-bottom: 50px;
+  border-radius: 8px;
+  gap: 16px;
+  background-color: var(--white);
+}
+
+.resumen-box {
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px 20px;
+}
+
+.resumen-titulo {
+  padding-left: 20px;
+  padding-top: 25px;
+  font-size: var(--md);
+  color: var(--black);
+  text-align: center;
+  font-size: var(--lg);
 }
 
 
 @media (max-width: 640px) {
 
-  .label-product{
-      justify-content: left;
-      gap: 12px;
-      width: 311px;
+  .label-product {
+    justify-content: left;
+    gap: 12px;
+    width: 311px;
   }
 
   .my-order-container {
