ajustando url main

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,6 +1,6 @@
  <nav >
     <div class="navbar-left">
-      <a href="../../index.html">
+      <a href="../../Decayba/">
         <img src="./src/assets/logos/logodecayba.png" alt="logo" class="logo" />
       </a>
 
