--- a/src/assets/css/carrito.css
+++ b/src/assets/css/carrito.css
@@ -108,6 +108,9 @@ body {
   gap: 20px;
   height: 100%;
 }
+.input-cantidad{
+  width: 70px;
+}
 
 .btn-remove {
   width: 14px;
@@ -196,7 +199,7 @@ body {
 
 .shopping-cart {
   display: flex;
-  gap: 42px;
+  gap: 28px;
   margin-bottom: 24px;
   align-items: center;
 
