se actualizan urls

--- a/src/components/headerglobal.html
+++ b/src/components/headerglobal.html
@@ -1,25 +1,25 @@
 
 <nav>
     <div class="navbar-left">
-      <a href="../../../../index.html">
-        <img src="../../assets/logos/logodecayba.png" alt="logo" class="logo" />
+      <a href="https://nury2015.github.io/Decayba/">
+        <img src="https://nury2015.github.io/Decayba/src/assets/logos/logodecayba.png" alt="logo" class="logo" />
       </a>
 
       <ul>
         <li>
-          <a href="../../pages/cosmetic/belleza.html">Belleza</a>
+          <a href="https://nury2015.github.io/Decayba/src/pages/cosmetic/belleza.html">Belleza</a>
         </li>
 
         <li>
-          <a href="../../pages/home/hogar.html">Hogar</a>
+          <a href="https://nury2015.github.io/Decayba/src/pages/home/hogar.html">Hogar</a>
         </li>
 
         <li>
-          <a href="../../pages/pets/mascotas.html">Mascotas</a>
+          <a href="https://nury2015.github.io/Decayba/src/pages/pets/mascotas.html">Mascotas</a>
         </li>
 
         <li>
-          <a href="../../pages/Toys/juguetes.html">Juguetes</a>
+          <a href="https://nury2015.github.io/Decayba/src/pages/Toys/juguetes.html">Juguetes</a>
         </li>
 
        
@@ -32,7 +32,7 @@
 
         <li class="navbar-shopping-cart">
           <a id="ver-carrito">
-            <img src="../../assets/icon/icon_shopping_cart.svg" alt="shopping cart" />
+            <img src="https://nury2015.github.io/Decayba/src/assets/icon/icon_shopping_cart.svg" alt="shopping cart" />
             <div>0</div>
           </a>
         </li>
