--- a/src/components/menuMobile.html
+++ b/src/components/menuMobile.html
@@ -7,23 +7,23 @@
 <div class="mobile-menu">
   <ul>
     <li>
-      <a href="/src/pages/cosmetic/belleza.html">Belleza</a>
+      <a href="https://nury2015.github.io/Decayba/src/pages/cosmetic/belleza.html">Belleza</a>
     </li>
 
     <li>
-      <a href="/src/pages/home/hogar.html">Hogar</a>
+      <a href="https://nury2015.github.io/Decayba/src/pages/home/hogar.html">Hogar</a>
     </li>
 
     <li>
-      <a href="/src/pages/pets/mascotas.html">Mascotas</a>
+      <a href="https://nury2015.github.io/Decayba/src/pages/pets/mascotas.html">Mascotas</a>
     </li>
 
     <li>
-      <a href="/src/pages/Toys/juguetes.html">Juguetes</a>
+      <a href="https://nury2015.github.io/Decayba/src/pages/Toys/juguetes.html">Juguetes</a>
     </li>
 
     <li>
-      <a href="/src/pages/home/index.html" class="sign-out">Salir</a>
+      <a href="https://nury2015.github.io/Decayba/" class="sign-out">Salir</a>
     </li>
   </ul>
 </div>
