--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,24 +1,24 @@
  <nav >
     <div class="navbar-left">
-      <a href="../../Decayba/">
-        <img src="./src/assets/logos/logodecayba.png" alt="logo" class="logo" />
+      <a href="https://nury2015.github.io/Decayba/">
+        <img src="https://nury2015.github.io/Decayba/src/assets/logos/logodecayba.png" alt="logo" class="logo" />
       </a>
 
       <ul>
         <li>
-          <a href="./src/pages/cosmetic/belleza.html">Belleza</a>
+          <a href="https://nury2015.github.io/Decayba/src/pages/cosmetic/belleza.html">Belleza</a>
         </li>
 
         <li>
-          <a href="./src/pages/home/hogar.html">Hogar</a>
+          <a href="https://nury2015.github.io/Decayba/src/pages/home/hogar.html">Hogar</a>
         </li>
 
         <li>
-          <a href="./src/pages/pets/mascotas.html">Mascotas</a>
+          <a href="https://nury2015.github.io/Decayba/src/pages/pets/mascotas.html">Mascotas</a>
         </li>
 
         <li>
-          <a href="./src/pages/Toys/juguetes.html">Juguetes</a>
+          <a href="https://nury2015.github.io/Decayba/src/pages/Toys/juguetes.html">Juguetes</a>
         </li>
 
        
@@ -31,7 +31,7 @@
 
         <li class="navbar-shopping-cart">
           <a id="ver-carrito">
-            <img src="./src/assets/icon/icon_shopping_cart.svg" alt="shopping cart" />
+            <img src="https://nury2015.github.io/Decayba/src/assets/icon/icon_shopping_cart.svg" alt="shopping cart" />
             <div>0</div>
           </a>
         </li>
