--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -75,6 +75,59 @@
   height: 40px;
 }
 
+footer{
+   background-color: black;
+}
+
+.footer-title{
+   font-weight: bold;
+  letter-spacing: 1px;
+  margin-bottom: 8px;
+}
+.pieDePagina{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 900px;
+  margin-top: 150px;
+
+  }
+.izquierdo{
+  text-align:center;
+}
+
+.izquierdo p{
+font-weight:bold; 
+letter-spacing:1px;
+ margin-bottom:23px;
+}
+
+.footer-icons {
+  display: flex;
+  gap: 23px;
+  align-items: center;
+}
+
+.footer-icons img {
+  width: 28px;
+  height: 28px;
+  transition: transform 0.2s ease, opacity 0.2s ease;
+}
+
+.footer-icons img:hover {
+  transform: scale(1.1);
+  opacity: 0.8;
+}
+
+
+.derecha{
+text-align: right;
+  font-size: 14px;
+  margin-top: 100px ;
+  margin-bottom:0 ;
+}
+
 @media (max-width: 640px) {
   .informacion-producto div p:nth-child(1) {
     font-size: 11px;
@@ -92,5 +145,14 @@
   .product-card img {
     width: 100%;
     height: 140px;
+  }
+
+   .footer-container {
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer-right {
+    margin-top: 15px;
+    text-align: center;
   }
 }
