probando coloor rojo

--- a/src/assets/css/belleza.css
+++ b/src/assets/css/belleza.css
@@ -5,7 +5,7 @@
 
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #fdfdfd;
+      background: #da5858;
       display: flex;
       align-items: center;
       flex-direction: column;
