--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -5,7 +5,7 @@ footer {
     text-align: center;
     padding: 1rem;
     font-size: 0.85rem;
-    background: #df0d0d;
+    background: #ffffff;
     color: #000000;
   }
   
